<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<name>McKesson Patient Folder ROI Alert Server</name>
	<description>POM for building McKesson Patient Folder ROI Alert Server</description>

	<groupId>com.mckesson.eig.server</groupId>
	<artifactId>alert-server</artifactId>
	<version>0.0.1</version>
	<packaging>pom</packaging>

	<modules>
		<module>alert</module>
		<module>alert-webapp</module>
	</modules>

	<properties>
		<project.version>17.5.1</project.version>
		<java.version>1.8</java.version>
		<junit.version>4.1</junit.version>
		<org.springframework.version>2.5.1</org.springframework.version>

		<!--  Manifest metadata -->
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
        <build.timestamp>${maven.build.timestamp}</build.timestamp>
        <build.number>${BUILD_NUMBER}</build.number>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.dbunit</groupId>
			<artifactId>dbunit</artifactId>
			<version>2.5.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockejb</groupId>
			<artifactId>mockejb</artifactId>
			<version>0.6-beta2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-all</artifactId>
			<version>${org.springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>com.mckesson.eig.roi</groupId>
			<artifactId>iws-ha</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.mckesson.eig.roi</groupId>
			<artifactId>hpf.stub.config</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.mckesson.eig.roi</groupId>
			<artifactId>hpf-signIn-stub</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.axis</groupId>
			<artifactId>axis</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.axis</groupId>
			<artifactId>axis-jaxrpc</artifactId>
			<version>1.4</version>
		</dependency>

	</dependencies>
	
	<profiles>
		<profile>
			<id>regularBuild</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<!-- Build and Deploy -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>2.5.1</version>
						<configuration>
							<source>${java.version}</source>
							<target>${java.version}</target>
							<testSource>${java.version}</testSource>
							<testTarget>${java.version}</testTarget>
							<encoding>Cp1252</encoding>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>2.7</version>
						<configuration>
							<skip>true</skip>
						</configuration>
					</plugin>
					<!-- Jar file configuration -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<version>2.4</version>
						<configuration>
							<archive>
								<addMavenDescriptor>false</addMavenDescriptor>
								<manifest>
									<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
								</manifest>
								<manifestEntries>
									<Implementation-Build-Date>${build.timestamp}</Implementation-Build-Date>
									<Implementation-Build-Number>${implementation.buildNumber}</Implementation-Build-Number>
									<Implementation-Version>${implementation.version}</Implementation-Version>
								</manifestEntries>
							</archive>
						</configuration>
					</plugin>
					<!-- War file configuration -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-war-plugin</artifactId>
						<version>2.3</version>
						<configuration>
							<packagingExcludes>WEB-INF/web.xml</packagingExcludes>
							<archive>
								<addMavenDescriptor>false</addMavenDescriptor>
								<manifest>
									<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
								</manifest>
								<manifestEntries>
									<Implementation-Build-Date>${build.timestamp}</Implementation-Build-Date>
									<Implementation-Build-Number>${implementation.buildNumber}</Implementation-Build-Number>
									<Implementation-Version>${implementation.version}</Implementation-Version>
								</manifestEntries>
							</archive>
						</configuration>
					</plugin>
					<!-- Test configuration -->
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.12</version>
						<configuration>
							<testFailureIgnore>true</testFailureIgnore>
							<argLine>-Xms40m -Xmx1024m -XX:MaxPermSize=256m -XX:-UseSplitVerifier</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>generateDocumentation</id>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.codehaus.enunciate</groupId>
							<artifactId>maven-enunciate-plugin</artifactId>
							<version>1.26</version>
							<configuration>
								<configFile>${project.build.directory}/../src/main/webapp/WEB-INF/enunciate.xml</configFile>
								<docsDir>${project.build.directory}/api</docsDir>
								<additionalClasspathEntries>
									<entry>${project.build.directory}</entry>
								</additionalClasspathEntries>
							</configuration>
							<executions>
								<execution>
									<goals>
										<goal>assemble</goal>
									</goals>
								</execution>
							</executions>
							<dependencies>
								<dependency>
									<groupId>org.codehaus.enunciate</groupId>
									<artifactId>enunciate-docs</artifactId>
									<version>1.26</version>
								</dependency>
								<dependency>
									<groupId>com.sun</groupId>
									<artifactId>tools</artifactId>
									<version>${java.version}</version>
									<scope>system</scope>
									<systemPath>${java.home}/../lib/tools.jar</systemPath>
								</dependency>
							</dependencies>
						</plugin>
						<!--This plugin's configuration is used to store Eclipse m2e settings 
							only. It has no influence on the Maven build itself. -->
						<plugin>
							<groupId>org.eclipse.m2e</groupId>
							<artifactId>lifecycle-mapping</artifactId>
							<version>1.0.0</version>
							<configuration>
								<lifecycleMappingMetadata>
									<pluginExecutions>
										<pluginExecution>
											<pluginExecutionFilter>
												<groupId>
													org.codehaus.enunciate
												</groupId>
												<artifactId>
													maven-enunciate-plugin
												</artifactId>
												<versionRange>[1.26,)</versionRange>
												<goals>
													<goal>assemble</goal>
												</goals>
											</pluginExecutionFilter>
											<action>
												<ignore></ignore>
											</action>
										</pluginExecution>
									</pluginExecutions>
								</lifecycleMappingMetadata>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>
</project>
